objects/Perf_Obj__c.object
<CustomObject>
    <description>Perf_Obj with blobs</description>
    <fields>
        <fullName>Perf_Obj_Blob__c</fullName>
        <description>Perf_Obj_Blob</description>
        <label>Perf_Obj_Blob</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>long_object_1__c</fullName>
        <label>longobject-1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rich__c</fullName>
        <label>richtext-1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>richtext_2__c</fullName>
        <label>richtext-2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Perf_Obj</label>
    <nameField>
        <label>Perf_Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perf_Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>